# WebCache

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
WebCacheCli/: CMakeLists.txt  main.cpp
WebCacheLib/: BasicHttpClient.cpp  BasicHttpClient.h  CMakeLists.txt  HttpClient.cpp  HttpClient.h  WebCache.cpp  WebCache.h  WebCache.hpp
WebCacheTests/: CMakeLists.txt  HttpClientTests.cpp  WebCacheTests.cpp  main.cpp
WebCacheTests/Mocks/: HttpClientMock.h
